# Celestradepro

./: Dockerfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf  running codes  running codes.txt  trial codes.txt
.github/workflows/: backend-deploy.yml  main.yml  main_celescontainerwebapp.yml  main_celweb(app).yml
celestradepro/: .deployment  .env  .env.production  Dockerfile  angular.json  docker-compose.yml  jest.test.js  mongo.js  package-lock.json  package.json  proxy.conf.json  server.js  web.config
celestradepro/Backend/: .env  CalrepController.js  CalrepModel.js  CommodityController.js  CommodityModel.js  CompriceController.js  CompriceModel.js  CompriceRoutes.js  Dockerfile.backend  EventController.js  EventModel.js  Option_ChainController.js  Option_ChainModel.js  OptionactiveController.js  OptionactiveModel.js  PortfolioController.js  PortfolioModel.js  StockGainerController.js  StockGainerModel.js  TransactionModel.js  app.py  co_mov.js  comProfController.js  comProfModel.js  comProfRouter.js  com_newsController.js  com_newsModel.js  com_newsRoutes.js  comindexController.js  comindexModel.js  commoditygainerController.js  compri.js  (+65 more)
celestradepro/Backend/openbb/openbbenv/: appleopen.py  datastoreopenbb.py  getaapl.py  pyproject.toml  pyvenv.cfg
celestradepro/Backend/openbb/openbbenv/Scripts/: activate  activate.bat
celestradepro/Backend/openbb/openbbenv/openbb_env/: c.py  pyvenv.cfg
celestradepro/Backend/openbb/openbbenv/openbb_env/Scripts/: activate  activate.bat
docer files/: Dockerfile.frontend  docker-compose.yml
(+462 files in other folders)
